--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </table>
 
   <!-- pop-up -->
-  <form id="pop-up">
+  <form class="hidden" id="pop-up">
     <div>
       <label for="title">Title:</label>
       <input required type="text" id="title" name="title">
