--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>~$ sudo Library</h1>
-  <button id="start-btn">Load Library</button>
+  <button id="start-btn"><span class="symbol">&#x2965;</span> Load Library <span class="symbol">&#x2965;</span></button>
   <div>
     <table id="table">
       <!-- 
@@ -31,7 +31,7 @@
       </tr> --> 
     </table>
     <tr>
-      <td><button id="add-book">Add Book<span><br>+</span></button></td>
+      <td><button id="add-book">Add Book<br>+</button></td>
     </tr>
     <tr>
 
@@ -53,11 +53,13 @@
       <input required type="number" id="pages" name="pages">
     </div>
     <div>
-      <label for="read">Read:</label>
+      <label id="read-label" for="read">Read:
       <input type="checkbox" id="read" name="read">
+      </label>
     </div>
     <div>
       <button id="submit-book">Submit</button>
+    </div>
 
   <script src="./script.js"></script>
 </body>
